# postgres-flatten

./: Cargo.toml  LICENSE  README.md
examples/: example.rs  run-passes-main.rs
impl/: Cargo.toml
impl/src/: impl_flattenable.rs  impl_from_flattened_sql.rs  impl_to_flattened_sql.rs  lib.rs
src/: flattened.rs  into_flattened.rs  lib.rs
tests/: test.rs
tests/ui/: compile-fails-unsupported-type.rs  compile-fails-unsupported-type.stderr  run-passes-nested-struct.rs
