[package]
name = "postgres-flatten"
version = "0.1.0"
authors = ["Bradley Thompson <bradlet2@pdx.edu>"]
description = "derive(ToFlattenedSql) | derive(FromFlattenedSql)"
edition = "2021"
keywords = ["derive", "flatten", "flatten-postgres"]
license = "MIT"

[dependencies.postgres-flatten-impl]
version = "=0.1.0"
path = "impl"

[dependencies.syn]
version = "2.0"
features = ["extra-traits"]

[dependencies.postgres]
version = "0.19"

[dev-dependencies.trybuild]
version = "1.0"

[workspace]
members = ["impl"]
